- improve the performance - add embed server.js to facility the test - add character navigation - add clickable for recent contact

--- a/www/applications/StartMeeting/index.html
+++ b/www/applications/StartMeeting/index.html
@@ -1,18 +1,36 @@
 <div data-role="page" id="startmeeting_index" self-menuIndex="1">
+    <style>
+        #scrollTo
+        {
+            z-index: 999;
+            position: fixed;
+            right: 5px;
+            top: 80px;
+            overflow: hidden;
+            font-size: 8pt;
+        }
+        #scrollTo li
+        {
+            list-style: none;
+        }
+    </style>
     <script src="js/index.js"></script>
     <div data-role="header" data-position="fixed">
         <h1 class="fullLengthToLeft">参会人：</h1><div id="selectedContactList"></div>
     </div>
     <div data-role="content" class="center">
+
 	    <ul data-role="listview" id="contactList" data-filter="true">
 	    </ul>
         <div id="goMeetingBtn">
         	<button data-theme="d" id="goMeetingButton">去开会</button>
         </div>
-        
     </div>
     <div id="multipleNumberSelectDiv">
         <ul data-role="listview" id="numberList">
         </ul>
     </div>
+    <ul id="scrollTo" style="display:none">
+         
+    </ul>
 </div>
